<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueApp"
    tools:context=".ui.UserSettings">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:cardCornerRadius="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" >

        <ImageView
            android:id="@+id/favoriteMonImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/favorite_pok_mon"
            app:srcCompat="@drawable/addteambutton"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/userName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/whiteApp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.32"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/favoriteMon"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/favorite_pokemon"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/whiteApp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintVertical_bias="0.25"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/nicknameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cocogoose_font"
        android:text="@string/nickname_detail"
        android:textColor="@color/whiteApp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.87"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/favoriteMonDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cocogoose_font"
        android:text="@string/favorite_pok_mon"
        android:textColor="@color/whiteApp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/favoriteMon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>