<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueApp"
    tools:context=".ui.MainActivity">


    <ImageView
            android:layout_width="298dp"
            android:layout_height="73dp"
            app:srcCompat="@drawable/app_logo"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.024"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/logo"
            app:layout_constraintHorizontal_bias="0.575" />

    <ScrollView
            android:layout_width="330dp"
            android:layout_height="500dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintBottom_toTopOf="@+id/exploreButton"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            android:id="@+id/scrollView6">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal|center_vertical">

            <com.google.android.material.card.MaterialCardView
                    android:layout_width="300dp"
                    android:layout_height="250dp"
                    app:cardCornerRadius="20dp"
                    android:id="@+id/videoContainer"
                    android:layout_margin="10dp">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp">

                        <VideoView
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:id="@+id/gameVideo" />

                    </RelativeLayout>

                    <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/videoButton"
                            android:insetTop="0dp"
                            android:insetBottom="0dp"
                            android:backgroundTint="@color/whiteApp"
                            android:textColor="@color/blueApp"
                            android:fontFamily="@font/cocogoose_font"
                            android:textAlignment="center"
                            android:text="@string/explore_the_pokedex"
                            tools:ignore="TextContrastCheck" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                    android:text="@string/find_out_a_new_pok_mon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:fontFamily="@font/cocogoose_font"
                    android:textColor="@color/whiteApp"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    tools:ignore="TextContrastCheck"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="300dp"
                    android:layout_height="180dp"
                    android:id="@+id/randomPokemons" />

            <ImageView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/coming_soon"
                    android:id="@+id/imageView4" />

        </LinearLayout>
    </ScrollView>

    <Button
            android:text="@string/explore_the_app"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/exploreButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/whiteApp"
            android:textColor="@color/blueApp"
            android:fontFamily="@font/cocogoose_font"
            tools:ignore="TextContrastCheck"
            app:layout_constraintEnd_toEndOf="@+id/scrollView6"
            app:layout_constraintStart_toStartOf="@+id/scrollView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.94" />

</androidx.constraintlayout.widget.ConstraintLayout>